# watcher

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md
docs/cli/: commands.md  examples.md
docs/config/: configuration.md  ignore-patterns.md  systemd.md
docs/development/: api.md  contributing.md
docs/examples/: dotfiles-config.yaml  nodejs-config.yaml  python-config.yaml
docs/guides/: best-practices.md  multi-project-setup.md  troubleshooting.md
systemd/: watcher@.service
templates/: config.yaml  ignore
watcher/: __init__.py  cli.py  config.py  core.py  ignore.py
